# video-streaming-platform

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: Dockerfile  app.js  index.html  nginx.conf  style.css
libs/shared-core/: Cargo.toml
libs/shared-core/src/: db.rs  infra.rs  lib.rs  models.rs  queue.rs  storage.rs
local-stack-init/: cors.json  init-aws.sh
services/api-server/: Cargo.toml
services/api-server/src/: main.rs  router.rs
services/api-server/src/handlers/: mod.rs  status.rs  upload.rs  webhook.rs
services/api-server/tests/: api_tests.rs
services/worker-playlist/: Cargo.toml
services/worker-playlist/src/: main.rs
services/worker-segment/: Cargo.toml
services/worker-segment/src/: main.rs
services/worker-transcode/: Cargo.toml
services/worker-transcode/src/: main.rs
