[package]
name = "shared-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = {workspace =  true}
aws-config = "1.1"
aws-sdk-sqs = "1.1"
thiserror = {workspace = true}
aws-sdk-s3 = "1.129.0"
aws-sdk-dynamodb = "1.110.0"
chrono = "0.4.44"
